--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 #root {
-  min-height: 100%;
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
 }
 
 @theme {
